<resources>

    <!-- Set app name -->
    <string name="app_name">Visual Timetable App</string>

    <!-- Button IDs and Strings -->
    <string name="btn_enter_app">Enter</string>
    <string name="btn_exit_app">Exit</string>
    <string name="btn_return_login">Return</string>
    <string name="btn_choose_image">Choose Image</string>
    <string name="btn_add_event">Add Event</string>
    <string name="btn_pick_date">Date</string>
    <string name="btn_edit_date">Change Date</string>
    <string name="btn_save_event">Save Event</string>
    <string name="btn_cancel_save">Cancel</string>
    <string name="btn_delete_event">Delete Event</string>
    <string name="btn_save_edited_event">Save Edited Event</string>
    <string name="btn_toggle_theme">Toggle Theme</string>
    <string name="btn_zoom_in">Zoom In</string>
    <string name="btn_zoom_out">Zoom Out</string>

    <!-- TextView IDs and Strings -->
    <string name="txt_enter_event_heading">Enter Event Name</string>
    <string name="txt_enter_event_description">Enter Event Description</string>
    <string name="txt_update_event_description">Enter New Event Description</string>
    <string name="txt_update_event_prompt">Enter New Event Name</string>
    <string name="txt_save_updated_event">Save Updates</string>
    <string name="txt_change_image_prompt">Click To Change Image</string>
    <string name="txt_update_event_heading">Edit Event</string>
    <string name="txt_start_screen_heading">Login</string>
    <string name="txt_finish_screen_heading">Logout</string>
    <string name="txt_display_screen_heading">Events</string>
    <string name="txt_add_screen_heading">Add Event</string>
    <string name="txt_choose_image">Choose Image</string>
    <string name="txt_delete_event">Delete Event</string>
    <string name="txt_select_theme">Select Theme</string>
    
    <!-- Strings for theme values -->
    <string name="theme_snowman">Snowman</string>
    <string name="theme_dark_knight">Dark Knight</string>
    <string name="theme_bumble_bee">Bumble Bee</string>
    <string name="theme_lady_bird">Lady Bird</string>

</resources>