<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemeToggleActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_snowman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/theme_snowman" />

        <Button
            android:id="@+id/btn_dark_knight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_snowman"
            android:layout_centerHorizontal="true"
            android:text="@string/theme_dark_knight" />

        <Button
            android:id="@+id/btn_bumble_bee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_dark_knight"
            android:layout_centerHorizontal="true"
            android:text="@string/theme_bumble_bee" />

        <Button
            android:id="@+id/btn_lady_bug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_bumble_bee"
            android:layout_centerHorizontal="true"
            android:text="@string/theme_lady_bug" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>