<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mahmon.visual_timetable_app.view.UpdateDeleteEventActivity">

    <!-- Include Toolbars in this layout -->
    <include layout="@layout/tool_bar_top" />

    <include layout="@layout/tool_bar_bottom" />

    <!-- Layout to hold the main center screen -->
    <RelativeLayout
        android:id="@+id/layout_update_screen_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <!-- Text View: To display screen heading -->
        <TextView
            android:id="@+id/txt_update_event_heading"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/txt_update_event_heading"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <!-- Edit Text: To receive new event heading -->
        <EditText
            android:id="@+id/edit_txt_enter_event_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_update_event_heading"
            android:layout_marginLeft="@dimen/wide_margin"
            android:layout_marginRight="@dimen/wide_margin"
            android:layout_marginTop="@dimen/narrow_margin"
            android:hint="@string/txt_update_event_prompt"
            android:inputType="text"
            android:paddingTop="@dimen/wide_margin"
            android:textAlignment="center"
            android:textSize="@dimen/font_large" />

        <!-- Image View: Display current image -->
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_view_current_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/edit_txt_enter_event_heading"
            android:layout_marginLeft="@dimen/wide_margin"
            android:layout_marginRight="@dimen/wide_margin"
            android:alpha="0.4" />

        <!-- Text View: Change image label -->
        <TextView
            android:id="@+id/txt_change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_txt_enter_event_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/txt_change_image_prompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <!-- Progress Bar: Shows upload progress-->
        <ProgressBar
            android:id="@+id/progress_bar_edit"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_current_image"
            android:layout_marginLeft="@dimen/wide_margin"
            android:layout_marginRight="@dimen/wide_margin" />

        <!-- Edit Text: To receive event description  -->
        <EditText
            android:id="@+id/edit_txt_update_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/wide_margin"
            android:layout_marginRight="@dimen/wide_margin"
            android:layout_marginTop="@dimen/narrow_margin"
            android:hint="@string/txt_update_event_description"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/wide_margin"
            android:textAlignment="center"
            android:textSize="@dimen/font_small" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
